# interviewAgents

./: AGENTS.md  LAUNCH_README.md  README.md  demand.md  environment.yml  plan.md
backend/: README.md  pyproject.toml
backend/assets/: markdown.css
backend/src/: schemas.py  server.py  setting.py
backend/src/api/: __init__.py
backend/src/api/routes/: export.py  health.py  preview.py  process.py  process_stream.py  upload.py
backend/src/config/: Settings.py
backend/src/core/chat_llm/: llms.py
backend/src/services/: llm_processor.py  markdowner.py  parser.py  processor.py  rule_processor.py
backend/src/utils/: ChunkSpliter.py
backend/tests/: preChunkByHeader.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  styles.css
frontend/src/components/: DiffSidebar.tsx
frontend/src/utils/: diff.ts
